--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,12 @@ export(.layer_mask_impl)
 export(.layer_numeric_impl)
 export(as_ggplot)
 export(build_ggplot.ggvibble)
+export(comp_offset_col)
+export(comp_offset_row)
 export(filter_slices)
 export(ggplane)
+export(id_add)
+export(id_split)
 export(join_vibbles)
 export(layer_bb)
 export(layer_grid)
@@ -23,15 +27,28 @@ export(make_nifti)
 export(map_lut)
 export(nifti_to_vbl)
 export(niftis_to_vbl)
+export(offset_attr)
+export(offset_dir)
+export(offset_dist)
 export(scale_fill_numeric)
 export(summarize_var)
+export(switch_axis_label)
 export(theme_clean)
 export(valid_orientation)
 export(var_smr)
+export(vars_data)
+export(vars_label)
+export(vars_mask)
+export(vars_numeric)
+export(vars_spatial)
+export(vars_type)
 export(vbl_layer)
 export(vbl_to_array)
+export(vibble2D)
 importFrom(colorspace,hcl_palettes)
+importFrom(dplyr,desc)
 importFrom(glue,glue)
+importFrom(purrr,keep)
 importFrom(purrr,map_lgl)
 importFrom(rlang,caller_env)
 importFrom(rlang,enquo)
