improved doc, S3 generic vibble

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,11 @@ Imports:
     progress,
     pryr,
     purrr,
+    RColorBrewer,
     reshape2,
     rlang,
     RNifti,
+    scales,
     sp,
     stringi,
     stringr,
