--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,35 +25,56 @@ export("lim<-")
 export("offset_dir<-")
 export("offset_dist<-")
 export("plane<-")
-export(.comp_offset_col)
-export(.comp_offset_row)
+export(.apply_offset)
 export(.ggplane_impl)
 export(.layer_grid_impl)
 export(as_ggplot)
-export(bb2D)
+export(as_img_anchor_abs)
+export(bb2D_df)
+export(bb2D_lst)
 export(bb3D)
 export(build_ggplot.ggvibble)
 export(ccs_labels)
 export(ccs_limits)
 export(ccs_orientation_mapping)
 export(ccs_to_plane)
+export(clrp_opts)
+export(clrp_opts_vec)
+export(clrsp_opts)
+export(clrsp_opts_vec)
+export(color_opts_viridis)
+export(color_palettes)
+export(color_vector)
+export(expand_lim2D)
 export(filter_bb3D)
-export(filter_slices)
-export(ggplane)
 export(id_add)
 export(id_split)
+export(img_anchors)
+export(is_bb2D)
 export(is_bb3D)
+export(is_expand)
+export(is_expand_abs)
+export(is_expand_lgl)
+export(is_expand_rel)
+export(is_img_anchor)
+export(is_img_anchor_abs)
+export(is_img_anchor_chr)
+export(is_img_anchor_rel)
 export(is_limit)
 export(is_offset)
 export(is_vbl)
 export(is_vbl2D)
 export(join_vibbles)
+export(layer_bb)
 export(layer_grid)
-export(layer_label)
-export(layer_mask)
-export(layer_numeric)
+export(layer_label_var)
+export(layer_lim)
+export(layer_mask_var)
+export(layer_numeric_var)
 export(layer_slice_number)
 export(lim)
+export(lim_plot)
+export(lim_slice)
 export(make_lut)
 export(make_nifti)
 export(map_lut)
@@ -61,13 +82,20 @@ export(nifti_to_vbl)
 export(niftis_to_vbl)
 export(offset_attr)
 export(offset_dir)
-export(offset_dir_choices)
+export(offset_directions)
 export(offset_dist)
 export(plane)
 export(plane_to_ccs)
+export(req_axes_2D)
 export(req_axes_2d)
+export(req_axes_3D)
+export(scale_fill_categorical)
 export(scale_fill_numeric)
 export(seq_slices)
+export(slice_bb)
+export(slice_offset_index)
+export(slices)
+export(srs_labels)
 export(summarize_var)
 export(switch_axis_label)
 export(theme_clean)
@@ -80,6 +108,8 @@ export(vars_mask)
 export(vars_numeric)
 export(vars_spatial)
 export(vars_type)
+export(vbl_attr)
+export(vbl_attr2D)
 export(vbl_ccs_axes)
 export(vbl_data_var_types)
 export(vbl_opts)
