--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,17 @@ S3method("+",ggvibble)
 S3method("[<-",vbl)
 S3method("[[<-",vbl)
 S3method("names<-",vbl)
+S3method(format,coord3D)
 S3method(group_by,vbl)
 S3method(group_by,vbl2D)
+S3method(limits,coord3D)
 S3method(mutate,grouped_vbl)
 S3method(mutate,grouped_vbl2D)
 S3method(mutate,vbl)
+S3method(obj_print_footer,coord3D)
+S3method(obj_sum,coord3D)
+S3method(pillar_shaft,coord3D)
+S3method(pillar_shaft,vbl_fct)
 S3method(print,ggvibble)
 S3method(print,vbl)
 S3method(print,vbl2D)
@@ -17,19 +23,26 @@ S3method(rename,vbl)
 S3method(transmute,grouped_vbl)
 S3method(transmute,grouped_vbl2D)
 S3method(transmute,vbl)
+S3method(type_sum,vbl_fct)
 S3method(ungroup,grouped_vbl)
 S3method(ungroup,grouped_vbl2D)
+S3method(vibble,data.frame)
+S3method(vibble,oro.nifti)
+S3method(vibble,vbl2D)
 export("%>%")
 export("ccs_limits<-")
-export("lim<-")
-export("offset_dir<-")
-export("offset_dist<-")
+export("cpal<-")
+export("offset_col<-")
+export("offset_row<-")
 export("plane<-")
+export("screen_limits<-")
 export(.apply_offset)
 export(.ggplane_impl)
 export(.layer_grid_impl)
+export(as_bb2D_df)
 export(as_ggplot)
 export(as_img_anchor_abs)
+export(avg_bb2D)
 export(bb2D_df)
 export(bb2D_lst)
 export(bb3D)
@@ -45,7 +58,9 @@ export(clrsp_opts_vec)
 export(color_opts_viridis)
 export(color_palettes)
 export(color_vector)
-export(expand_lim2D)
+export(coord3D)
+export(cpal)
+export(expand_bb2D)
 export(filter_bb3D)
 export(id_add)
 export(id_split)
@@ -66,36 +81,44 @@ export(is_vbl)
 export(is_vbl2D)
 export(join_vibbles)
 export(layer_bb)
+export(layer_categorical)
 export(layer_grid)
-export(layer_label_var)
-export(layer_lim)
-export(layer_mask_var)
-export(layer_numeric_var)
+export(layer_mask)
+export(layer_numeric)
+export(layer_plot_limits)
+export(layer_screen_limits)
+export(layer_slice_limits)
 export(layer_slice_number)
-export(lim)
-export(lim_plot)
-export(lim_slice)
 export(make_lut)
 export(make_nifti)
 export(map_lut)
+export(new_coord3D)
+export(new_factor)
 export(nifti_to_vbl)
+export(nifti_to_voxel_df)
 export(niftis_to_vbl)
-export(offset_attr)
-export(offset_dir)
+export(offset_both)
+export(offset_col)
 export(offset_directions)
-export(offset_dist)
+export(offset_row)
 export(plane)
 export(plane_to_ccs)
+export(plot_limits)
+export(pointer.coord3D)
 export(req_axes_2D)
 export(req_axes_2d)
 export(req_axes_3D)
 export(scale_fill_categorical)
 export(scale_fill_numeric)
+export(screen_limits)
 export(seq_slices)
-export(slice_bb)
+export(slice_limits)
 export(slice_offset_index)
+export(slice_offset_indices)
+export(slice_range)
 export(slices)
 export(srs_labels)
+export(step_mm.coord3D)
 export(summarize_var)
 export(switch_axis_label)
 export(theme_clean)
@@ -117,8 +140,10 @@ export(vbl_opts_default)
 export(vbl_planes)
 export(vbl_planes_pretty)
 export(vbl_to_array)
+export(vibble)
 export(vibble2D)
 export(within_limits)
+import(vctrs)
 importFrom(dplyr,filter)
 importFrom(dplyr,n_distinct)
 importFrom(glue,glue)
