--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,18 +4,21 @@ S3method("$<-",vbl)
 S3method("+",ggvibble)
 S3method("[<-",vbl)
 S3method("[[<-",vbl)
+S3method("ccs_limits<-",vbl)
+S3method("ccs_steps<-",vbl)
 S3method("names<-",vbl)
-S3method(format,coord3D)
+S3method("var_limits<-",numeric)
+S3method("var_limits<-",vbl)
+S3method("var_limits<-",vbl2D)
+S3method(ccs_limits,vbl)
+S3method(ccs_limits,vbl2D)
+S3method(ccs_steps,vbl)
+S3method(ccs_steps,vbl2D)
 S3method(group_by,vbl)
 S3method(group_by,vbl2D)
-S3method(limits,coord3D)
 S3method(mutate,grouped_vbl)
 S3method(mutate,grouped_vbl2D)
 S3method(mutate,vbl)
-S3method(obj_print_footer,coord3D)
-S3method(obj_sum,coord3D)
-S3method(pillar_shaft,coord3D)
-S3method(pillar_shaft,vbl_fct)
 S3method(print,ggvibble)
 S3method(print,vbl)
 S3method(print,vbl2D)
@@ -23,22 +26,26 @@ S3method(rename,vbl)
 S3method(transmute,grouped_vbl)
 S3method(transmute,grouped_vbl2D)
 S3method(transmute,vbl)
-S3method(type_sum,vbl_fct)
 S3method(ungroup,grouped_vbl)
 S3method(ungroup,grouped_vbl2D)
+S3method(var_limits,numeric)
+S3method(var_limits,vbl)
+S3method(var_limits,vbl2D)
 S3method(vibble,data.frame)
 S3method(vibble,oro.nifti)
 S3method(vibble,vbl2D)
 export("%>%")
 export("ccs_limits<-")
-export("cpal<-")
+export("ccs_steps<-")
 export("offset_col<-")
 export("offset_row<-")
 export("plane<-")
 export("screen_limits<-")
+export("var_limits<-")
 export(.apply_offset)
 export(.ggplane_impl)
 export(.layer_grid_impl)
+export(.reverse_offset)
 export(as_bb2D_df)
 export(as_ggplot)
 export(as_img_anchor_abs)
@@ -50,6 +57,7 @@ export(build_ggplot.ggvibble)
 export(ccs_labels)
 export(ccs_limits)
 export(ccs_orientation_mapping)
+export(ccs_steps)
 export(ccs_to_plane)
 export(clrp_opts)
 export(clrp_opts_vec)
@@ -58,15 +66,18 @@ export(clrsp_opts_vec)
 export(color_opts_viridis)
 export(color_palettes)
 export(color_vector)
-export(coord3D)
-export(cpal)
+export(dcm_to_vbl)
 export(expand_bb2D)
 export(filter_bb3D)
+export(filter_mask)
 export(id_add)
 export(id_split)
 export(img_anchors)
+export(inside_limits)
 export(is_bb2D)
 export(is_bb3D)
+export(is_ccs_limits)
+export(is_ccs_steps)
 export(is_expand)
 export(is_expand_abs)
 export(is_expand_lgl)
@@ -89,22 +100,21 @@ export(layer_plot_limits)
 export(layer_screen_limits)
 export(layer_slice_limits)
 export(layer_slice_number)
+export(layer_slice_ref)
 export(make_lut)
 export(make_nifti)
 export(map_lut)
-export(new_coord3D)
-export(new_factor)
 export(nifti_to_vbl)
 export(nifti_to_voxel_df)
 export(niftis_to_vbl)
-export(offset_both)
+export(offset_axes)
 export(offset_col)
-export(offset_directions)
 export(offset_row)
 export(plane)
+export(plane_resolution)
+export(plane_resolutions)
 export(plane_to_ccs)
 export(plot_limits)
-export(pointer.coord3D)
 export(req_axes_2D)
 export(req_axes_2d)
 export(req_axes_3D)
@@ -118,13 +128,13 @@ export(slice_offset_indices)
 export(slice_range)
 export(slices)
 export(srs_labels)
-export(step_mm.coord3D)
 export(summarize_var)
 export(switch_axis_label)
 export(theme_clean)
 export(valid_orientation)
 export(validate_vbl)
-export(var_smr)
+export(var_limits)
+export(var_type)
 export(vars_data)
 export(vars_label)
 export(vars_mask)
@@ -143,13 +153,11 @@ export(vbl_to_array)
 export(vibble)
 export(vibble2D)
 export(within_limits)
-import(vctrs)
 importFrom(dplyr,filter)
 importFrom(dplyr,n_distinct)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(purrr,keep)
-importFrom(purrr,map)
 importFrom(purrr,map_lgl)
 importFrom(rlang,caller_env)
 importFrom(rlang,enquo)
