add missing imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,11 +23,6 @@ S3method(print,ggvibble)
 S3method(print,vbl)
 S3method(print,vbl2D)
 S3method(rename,vbl)
-S3method(transmute,grouped_vbl)
-S3method(transmute,grouped_vbl2D)
-S3method(transmute,vbl)
-S3method(ungroup,grouped_vbl)
-S3method(ungroup,grouped_vbl2D)
 S3method(var_limits,numeric)
 S3method(var_limits,vbl)
 S3method(var_limits,vbl2D)
@@ -131,6 +126,11 @@ export(srs_labels)
 export(summarize_var)
 export(switch_axis_label)
 export(theme_clean)
+export(transmute.grouped_vbl)
+export(transmute.grouped_vbl2D)
+export(transmute.vbl)
+export(ungroup.grouped_vbl)
+export(ungroup.grouped_vbl2D)
 export(valid_orientation)
 export(validate_vbl)
 export(var_limits)
@@ -153,8 +153,15 @@ export(vbl_to_array)
 export(vibble)
 export(vibble2D)
 export(within_limits)
+importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
 importFrom(dplyr,n_distinct)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
+importFrom(dplyr,slice)
+importFrom(dplyr,summarise)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(purrr,keep)
