--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,11 @@ S3method(print,ggvibble)
 S3method(print,vbl)
 S3method(print,vbl2D)
 S3method(rename,vbl)
+S3method(transmute,grouped_vbl)
+S3method(transmute,grouped_vbl2D)
+S3method(transmute,vbl)
+S3method(ungroup,grouped_vbl)
+S3method(ungroup,grouped_vbl2D)
 S3method(var_limits,numeric)
 S3method(var_limits,vbl)
 S3method(var_limits,vbl2D)
@@ -38,7 +43,6 @@ export("plane<-")
 export("screen_limits<-")
 export("var_limits<-")
 export(.apply_offset)
-export(.ggplane_impl)
 export(.layer_grid_impl)
 export(.reverse_offset)
 export(as_bb2D_df)
@@ -65,6 +69,7 @@ export(dcm_to_vbl)
 export(expand_bb2D)
 export(filter_bb3D)
 export(filter_mask)
+export(ggplane)
 export(id_add)
 export(id_split)
 export(img_anchors)
@@ -99,6 +104,7 @@ export(layer_slice_ref)
 export(make_lut)
 export(make_nifti)
 export(map_lut)
+export(new_vbl)
 export(nifti_to_vbl)
 export(nifti_to_voxel_df)
 export(niftis_to_vbl)
@@ -126,11 +132,6 @@ export(srs_labels)
 export(summarize_var)
 export(switch_axis_label)
 export(theme_clean)
-export(transmute.grouped_vbl)
-export(transmute.grouped_vbl2D)
-export(transmute.vbl)
-export(ungroup.grouped_vbl)
-export(ungroup.grouped_vbl2D)
 export(valid_orientation)
 export(validate_vbl)
 export(var_limits)
