namespace fix dplyr verbs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,6 +163,9 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
+importFrom(dplyr,summarize)
+importFrom(dplyr,transmute)
+importFrom(dplyr,ungroup)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(purrr,keep)
