--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ export(req_axes_3D)
 export(scale_fill_categorical)
 export(scale_fill_numeric)
 export(screen_limits)
+export(seq_range)
 export(seq_slices)
 export(slice_limits)
 export(slice_offset_index)
@@ -166,6 +167,7 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,alpha)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(purrr,keep)
