--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Imports:
     forcats,
     ggnewscale,
     ggplot2,
+    ggrepel,
     magrittr,
     oro.nifti,
     pillar,
@@ -30,6 +31,7 @@ Imports:
     rlang,
     RNifti,
     scales,
+    shiny,
     sp,
     stringi,
     stringr,
