--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,9 +42,8 @@ export("offset_row<-")
 export("plane<-")
 export("screen_limits<-")
 export("var_limits<-")
-export(.apply_offset)
 export(.layer_grid_impl)
-export(.reverse_offset)
+export(apply_offset)
 export(as_bb2D_df)
 export(as_ggplot)
 export(as_img_anchor_abs)
@@ -94,8 +93,10 @@ export(join_vibbles)
 export(layer_bb)
 export(layer_categorical)
 export(layer_grid)
+export(layer_labels)
 export(layer_mask)
 export(layer_numeric)
+export(layer_outline)
 export(layer_plot_limits)
 export(layer_screen_limits)
 export(layer_slice_limits)
@@ -119,6 +120,7 @@ export(plot_limits)
 export(req_axes_2D)
 export(req_axes_2d)
 export(req_axes_3D)
+export(reverse_offset)
 export(scale_fill_categorical)
 export(scale_fill_numeric)
 export(screen_limits)
