legend mapping for mask, outline and bboxes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ S3method("names<-",vbl)
 S3method("var_limits<-",numeric)
 S3method("var_limits<-",vbl)
 S3method("var_limits<-",vbl2D)
+S3method(.infer_datatype,default)
+S3method(.infer_datatype,vbl)
 S3method(ccs_limits,vbl)
 S3method(ccs_limits,vbl2D)
 S3method(ccs_steps,vbl)
@@ -31,6 +33,8 @@ S3method(ungroup,grouped_vbl2D)
 S3method(var_limits,numeric)
 S3method(var_limits,vbl)
 S3method(var_limits,vbl2D)
+S3method(var_range,vbl)
+S3method(var_range,vbl2D)
 S3method(vibble,data.frame)
 S3method(vibble,oro.nifti)
 S3method(vibble,vbl2D)
@@ -40,8 +44,8 @@ export("ccs_steps<-")
 export("offset_col<-")
 export("offset_row<-")
 export("plane<-")
-export("screen_limits<-")
 export("var_limits<-")
+export(.infer_datatype)
 export(.layer_grid_impl)
 export(apply_offset)
 export(as_bb2D_df)
@@ -64,6 +68,7 @@ export(clrsp_opts_vec)
 export(color_opts_viridis)
 export(color_palettes)
 export(color_vector)
+export(data_bb)
 export(dcm_to_vbl)
 export(expand_bb2D)
 export(filter_bb3D)
@@ -91,19 +96,19 @@ export(is_vbl)
 export(is_vbl2D)
 export(join_vibbles)
 export(layer_bb)
+export(layer_bb_data)
+export(layer_bb_plot)
+export(layer_bb_screen)
+export(layer_bb_slice)
 export(layer_categorical)
 export(layer_grid)
 export(layer_labels)
 export(layer_mask)
 export(layer_numeric)
 export(layer_outline)
-export(layer_plot_limits)
-export(layer_screen_limits)
-export(layer_slice_limits)
 export(layer_slice_number)
 export(layer_slice_ref)
 export(make_lut)
-export(make_nifti)
 export(map_lut)
 export(new_vbl)
 export(nifti_to_vbl)
@@ -116,28 +121,28 @@ export(plane)
 export(plane_resolution)
 export(plane_resolutions)
 export(plane_to_ccs)
-export(plot_limits)
+export(plot_bb)
 export(req_axes_2D)
 export(req_axes_2d)
 export(req_axes_3D)
 export(reverse_offset)
 export(scale_fill_categorical)
 export(scale_fill_numeric)
-export(screen_limits)
+export(screen_bb)
 export(seq_range)
 export(seq_slices)
-export(slice_limits)
+export(slice_bb)
 export(slice_offset_index)
 export(slice_offset_indices)
 export(slice_range)
 export(slices)
 export(srs_labels)
-export(summarize_var)
 export(switch_axis_label)
 export(theme_clean)
 export(valid_orientation)
 export(validate_vbl)
 export(var_limits)
+export(var_range)
 export(var_type)
 export(vars_data)
 export(vars_label)
@@ -157,6 +162,7 @@ export(vbl_to_array)
 export(vibble)
 export(vibble2D)
 export(within_limits)
+export(write_nifti)
 importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
