--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,24 @@ S3method(print,ggvibble)
 S3method(print,vbl)
 S3method(print,vbl2D)
 S3method(rename,vbl)
+S3method(slice_limits,vbl)
+S3method(slice_limits,vbl2D)
+S3method(slice_max,vbl)
+S3method(slice_max,vbl2D)
+S3method(slice_mid,vbl)
+S3method(slice_mid,vbl2D)
+S3method(slice_min,vbl)
+S3method(slice_min,vbl2D)
+S3method(slice_range,vbl)
+S3method(slice_range,vbl2D)
+S3method(slices,vbl)
+S3method(slices,vbl2D)
+S3method(slices_cond,vbl)
+S3method(slices_cond,vbl2D)
+S3method(slices_mid,vbl)
+S3method(slices_mid,vbl2D)
+S3method(slices_seq,vbl)
+S3method(slices_seq,vbl2D)
 S3method(transmute,grouped_vbl)
 S3method(transmute,grouped_vbl2D)
 S3method(transmute,vbl)
@@ -106,8 +124,8 @@ export(layer_labels)
 export(layer_mask)
 export(layer_numeric)
 export(layer_outline)
-export(layer_slice_number)
-export(layer_slice_ref)
+export(layer_slice_numbers)
+export(layer_slice_projections)
 export(make_lut)
 export(map_lut)
 export(new_vbl)
@@ -132,10 +150,14 @@ export(screen_bb)
 export(seq_range)
 export(seq_slices)
 export(slice_bb)
-export(slice_offset_index)
-export(slice_offset_indices)
+export(slice_limits)
+export(slice_max)
+export(slice_mid)
+export(slice_min)
 export(slice_range)
 export(slices)
+export(slices_mid)
+export(slices_seq)
 export(srs_labels)
 export(switch_axis_label)
 export(theme_clean)
