--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,25 +28,23 @@ S3method(print,ggvibble)
 S3method(print,vbl)
 S3method(print,vbl2D)
 S3method(rename,vbl)
-S3method(slice_limits,vbl)
-S3method(slice_limits,vbl2D)
-S3method(slice_max,vbl)
-S3method(slice_max,vbl2D)
-S3method(slice_mid,vbl)
-S3method(slice_mid,vbl2D)
-S3method(slice_min,vbl)
-S3method(slice_min,vbl2D)
-S3method(slice_range,vbl)
-S3method(slice_range,vbl2D)
 S3method(slices,ggvibble)
 S3method(slices,vbl)
 S3method(slices,vbl2D)
 S3method(slices_cond,vbl)
 S3method(slices_cond,vbl2D)
+S3method(slices_limits,vbl)
+S3method(slices_limits,vbl2D)
+S3method(slices_max,vbl)
+S3method(slices_max,vbl2D)
 S3method(slices_mid,vbl)
 S3method(slices_mid,vbl2D)
-S3method(slices_seq,vbl)
-S3method(slices_seq,vbl2D)
+S3method(slices_mid1,vbl)
+S3method(slices_mid1,vbl2D)
+S3method(slices_min,vbl)
+S3method(slices_min,vbl2D)
+S3method(slices_range,vbl)
+S3method(slices_range,vbl2D)
 S3method(transmute,grouped_vbl)
 S3method(transmute,grouped_vbl2D)
 S3method(transmute,vbl)
@@ -69,6 +67,7 @@ export("plane<-")
 export("var_limits<-")
 export(.infer_datatype)
 export(.layer_grid_impl)
+export(add_var_head_mask)
 export(apply_offset)
 export(as_bb2D_df)
 export(as_ggplot)
@@ -93,16 +92,22 @@ export(color_vector)
 export(data_bb)
 export(dcm_to_vbl)
 export(expand_bb2D)
+export(filter_bb2D)
+export(filter_bb3D)
 export(filter_mask)
 export(ggplane)
 export(id_add)
 export(id_split)
 export(img_anchors)
 export(inside_limits)
+export(is_alpha)
+export(is_alpha_set)
 export(is_bb2D)
 export(is_bb3D)
 export(is_ccs_limits)
 export(is_ccs_steps)
+export(is_color)
+export(is_color_set)
 export(is_expand)
 export(is_expand_abs)
 export(is_expand_lgl)
@@ -112,7 +117,11 @@ export(is_img_anchor_abs)
 export(is_img_anchor_chr)
 export(is_img_anchor_rel)
 export(is_limit)
+export(is_linetype_set)
 export(is_offset)
+export(is_plane)
+export(is_size)
+export(is_size_set)
 export(is_slice)
 export(is_slice_seq)
 export(is_slice_set)
@@ -159,15 +168,14 @@ export(screen_bb)
 export(seq_range)
 export(seq_slices)
 export(slice_bb)
-export(slice_limits)
-export(slice_max)
-export(slice_mid)
-export(slice_min)
-export(slice_range)
 export(slices)
 export(slices_cond)
+export(slices_limits)
+export(slices_max)
 export(slices_mid)
-export(slices_seq)
+export(slices_mid1)
+export(slices_min)
+export(slices_range)
 export(srs_labels)
 export(switch_axis_label)
 export(theme_clean)
@@ -186,6 +194,7 @@ export(vbl_attr)
 export(vbl_attr2D)
 export(vbl_ccs_axes)
 export(vbl_data_var_types)
+export(vbl_def)
 export(vbl_opts)
 export(vbl_opts_default)
 export(vbl_planes)
@@ -200,6 +209,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n_distinct)
+importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
@@ -208,11 +218,10 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,alpha)
-importFrom(ggplot2,waiver)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
-importFrom(purrr,keep)
 importFrom(purrr,map_lgl)
 importFrom(rlang,caller_env)
 importFrom(rlang,enquo)
 importFrom(rlang,sym)
+importFrom(stats,median)
