clip offset logic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method("names<-",vbl)
 S3method("var_limits<-",numeric)
 S3method("var_limits<-",vbl)
 S3method("var_limits<-",vbl2D)
+S3method(.check_input_slices,vbl2D)
 S3method(.infer_datatype,default)
 S3method(.infer_datatype,vbl)
 S3method(Ops,ggvibble)
@@ -37,6 +38,7 @@ S3method(slices_limits,vbl)
 S3method(slices_limits,vbl2D)
 S3method(slices_max,vbl)
 S3method(slices_max,vbl2D)
+S3method(slices_max_area,vbl)
 S3method(slices_mid,vbl)
 S3method(slices_mid,vbl2D)
 S3method(slices_mid1,vbl)
@@ -65,6 +67,7 @@ export("offset_col<-")
 export("offset_row<-")
 export("plane<-")
 export("var_limits<-")
+export(.check_input_slices)
 export(.infer_datatype)
 export(.layer_grid_impl)
 export(add_var_head_mask)
@@ -143,6 +146,7 @@ export(layer_numeric)
 export(layer_outline)
 export(layer_slice_numbers)
 export(layer_slice_projections)
+export(layer_text_ann)
 export(make_lut)
 export(map_lut)
 export(mid)
@@ -172,6 +176,7 @@ export(slices)
 export(slices_cond)
 export(slices_limits)
 export(slices_max)
+export(slices_max_area)
 export(slices_mid)
 export(slices_mid1)
 export(slices_min)
