--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ S3method("names<-",vbl)
 S3method("var_limits<-",numeric)
 S3method("var_limits<-",vbl)
 S3method("var_limits<-",vbl2D)
-S3method(.check_input_slices,vbl2D)
 S3method(.infer_datatype,default)
 S3method(.infer_datatype,vbl)
 S3method(Ops,ggvibble)
@@ -67,7 +66,6 @@ export("offset_col<-")
 export("offset_row<-")
 export("plane<-")
 export("var_limits<-")
-export(.check_input_slices)
 export(.infer_datatype)
 export(.layer_grid_impl)
 export(add_var_head_mask)
@@ -140,13 +138,16 @@ export(layer_categorical)
 export(layer_crop)
 export(layer_grid)
 export(layer_labels)
+export(layer_labs)
 export(layer_mask)
 export(layer_misc)
 export(layer_numeric)
+export(layer_orientation)
 export(layer_outline)
 export(layer_slice_numbers)
 export(layer_slice_projections)
 export(layer_text_ann)
+export(layer_theme)
 export(make_lut)
 export(map_lut)
 export(mid)
@@ -189,8 +190,8 @@ export(validate_vbl)
 export(var_limits)
 export(var_range)
 export(var_type)
+export(vars_categorical)
 export(vars_data)
-export(vars_label)
 export(vars_mask)
 export(vars_numeric)
 export(vars_spatial)
@@ -204,6 +205,7 @@ export(vbl_opts)
 export(vbl_opts_default)
 export(vbl_planes)
 export(vbl_planes_pretty)
+export(vbl_protected_vars)
 export(vbl_to_array)
 export(vibble)
 export(vibble2D)
