context in ggplane()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,8 @@ export("plane<-")
 export("var_limits<-")
 export(.infer_datatype)
 export(.layer_grid_impl)
+export(GeomSegmentPanel)
+export(GeomTextPanel)
 export(add_var_head_mask)
 export(apply_offset)
 export(as_bb2D_df)
@@ -96,6 +98,8 @@ export(expand_bb2D)
 export(filter_bb2D)
 export(filter_bb3D)
 export(filter_mask)
+export(geom_segment_panel)
+export(geom_text_panel)
 export(ggplane)
 export(id_add)
 export(id_split)
@@ -120,6 +124,7 @@ export(is_img_anchor_rel)
 export(is_limit)
 export(is_linetype_set)
 export(is_offset)
+export(is_outlier)
 export(is_plane)
 export(is_size)
 export(is_size_set)
@@ -204,6 +209,7 @@ export(vbl_def)
 export(vbl_opts)
 export(vbl_opts_default)
 export(vbl_planes)
+export(vbl_planes_full)
 export(vbl_planes_pretty)
 export(vbl_protected_vars)
 export(vbl_to_array)
