rename ggplane -> ggvibble; introduce ggvibble_layouts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ S3method("var_limits<-",vbl2D)
 S3method(.infer_datatype,default)
 S3method(.infer_datatype,vbl)
 S3method(Ops,ggvibble)
+S3method(Ops,ggvibble_layout)
+S3method(as_ggplot,ggvibble)
+S3method(as_ggplot,ggvibble_layout)
 S3method(ccs_limits,vbl)
 S3method(ccs_limits,vbl2D)
 S3method(ccs_steps,vbl)
@@ -20,11 +23,14 @@ S3method(group_by,vbl)
 S3method(group_by,vbl2D)
 S3method(is_offset,ggvibble)
 S3method(is_offset,vbl2D)
+S3method(length,ggvibble_layout)
 S3method(mutate,grouped_vbl)
 S3method(mutate,grouped_vbl2D)
 S3method(mutate,vbl)
 S3method(plot,ggvibble)
+S3method(plot,ggvibble_layout)
 S3method(print,ggvibble)
+S3method(print,ggvibble_layout)
 S3method(print,vbl)
 S3method(print,vbl2D)
 S3method(rename,vbl)
@@ -100,7 +106,7 @@ export(filter_bb3D)
 export(filter_mask)
 export(geom_segment_panel)
 export(geom_text_panel)
-export(ggplane)
+export(ggvibble)
 export(id_add)
 export(id_split)
 export(img_anchors)
@@ -190,6 +196,7 @@ export(slices_range)
 export(srs_labels)
 export(switch_axis_label)
 export(theme_clean)
+export(theme_vbl)
 export(valid_orientation)
 export(validate_vbl)
 export(var_limits)
