--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(ccs_limits)
 export(ccs_orientation_mapping)
 export(ccs_steps)
 export(ccs_to_plane)
+export(clip_max_quantile)
 export(clrp_opts)
 export(clrp_opts_vec)
 export(clrsp_opts)
@@ -99,7 +100,9 @@ export(color_opts_viridis)
 export(color_palettes)
 export(color_vector)
 export(data_bb)
+export(dcm2niix_convert)
 export(dcm_to_vbl)
+export(descr_dim)
 export(expand_bb2D)
 export(filter_bb2D)
 export(filter_bb3D)
@@ -132,6 +135,8 @@ export(is_linetype_set)
 export(is_offset)
 export(is_outlier)
 export(is_plane)
+export(is_series_meta)
+export(is_series_var)
 export(is_size)
 export(is_size_set)
 export(is_slice)
